# r0b1c3

./: .gitignore  .gitmodules
Fw/SDK_16/components/toolchain/gcc/: Makefile.windows
Fw/bootloader/: CMakeLists.txt  main.c
Fw/config/: .cproject  .project  SDK.cmake  bootloader.ld  controller.ld  custom_board.h  nrf52.cmake  sdk_config.h
Fw/controller/: .cproject  .project  CMakeLists.txt
Fw/controller/src/: bluetooth.c  bluetooth.h  bonding.c  bonding.h  control.c  control.h  custom_service.c  custom_service.h  display.c  display.h  ili9341.c  ili9341.h  main.c  r3_service.c  touchscreen.c  touchscreen.h
Fw/controller/src/gui/: display.c  ili9341.c  ili9341.h  touchscreen.h
